fix dependencies removed koin added hilt added compose library updated a few libraries

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-parcelize'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
-apply plugin: "androidx.navigation.safeargs"
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+}
+
 
 android {
 
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     def versionPropsFile = file('version.properties')
     Properties versionProps = new Properties()
@@ -31,7 +33,7 @@ android {
         renderscriptSupportModeEnabled true
         applicationId "com.creat.motiv"
         minSdkVersion 26
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode versionNumber
         versionName vName
         renderscriptTargetApi 19
@@ -82,8 +84,6 @@ android {
             excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0', 'META-INF/*.kotlin_module']
         }
     }
-
-
 }
 
 dependencies {
@@ -92,65 +92,3 @@ dependencies {
     implementation project(':manager')
     implementation "com.github.skydoves:balloon:1.2.7"
 }
-repositories {
-    mavenCentral()
-}
-
-
-task updateVersion {
-    doLast {
-        println "Updating version"
-
-        def versionPropsFile = file("version.properties")
-        Properties versionProps = new Properties()
-        if (versionPropsFile.canRead()) {
-            versionProps.load(new FileInputStream(versionPropsFile))
-        }
-        else {
-
-            throw new GradleException("Could not read version.properties!")
-        }
-
-        def versionMajor = versionProps["VERSION_MAJOR"].toInteger()
-        def versionMinor = versionProps["VERSION_MINOR"].toInteger()
-        def versionPatch = versionProps["VERSION_PATCH"].toInteger()
-        def versionBuild = versionProps["VERSION_BUILD"].toInteger()
-        def versionNumber = versionProps["VERSION_NUMBER"].toInteger() + 1
-
-        if (versionBuild < 20) {
-            versionBuild++
-        } else {
-            versionBuild = 0
-            if (versionPatch < 10) {
-                versionPatch++
-            } else {
-                versionPatch = 0
-                if (versionMinor < 15) {
-                    versionMinor++
-                } else {
-                    versionMinor = 0
-                    versionMajor++
-                }
-            }
-        }
-
-        versionProps["VERSION_NUMBER"] = versionNumber.toString()
-        versionProps["VERSION_MAJOR"] = versionMajor.toString()
-        versionProps["VERSION_MINOR"] = versionMinor.toString()
-        versionProps["VERSION_PATCH"] = versionPatch.toString()
-        versionProps["VERSION_BUILD"] = versionBuild.toString()
-
-        versionPropsFile.withWriter { versionProps.store(it, null) }
-
-        println "New version $versionNumber -> $versionMajor.$versionMinor.$versionPatch.$versionBuild"
-    }
-
-}
-
-
-
-
-
-
-
-
