--- a/build.gradle
+++ b/build.gradle
@@ -3,38 +3,24 @@
 buildscript {
 
     ext {
-        ext.kotlin_version = '1.7.10'
-        ext.ilustris_version = '2.5.5'
-        ext.koin_version = "3.1.5"
-    }
-    repositories {
-        google()
-        jcenter()
+        kotlin_version = '1.7.20'
+        ilustris_version = '2.5.5'
+        koin_version = "3.1.5"
+        compose_version = '1.3.3'
+        roomVersion = "2.5.0"
+        hiltVersion = "2.44"
+        lottieVersion = "5.2.0"
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath 'com.google.gms:google-services:4.3.13'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.android.databinding:dataBinder:1.0-rc1'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1")
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
     }
 }
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-        mavenLocal()
-        maven { url "https://jitpack.io" }
-        maven { url "https://maven.google.com" }
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+plugins {
+    id 'com.android.application' version '7.4.0' apply false
+    id 'com.android.library' version '7.4.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
 
