--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -1,14 +1,16 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-parcelize'
-apply plugin: "androidx.navigation.safeargs"
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+}
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 31
+        targetSdkVersion 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -37,11 +39,4 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api project(':base')
     implementation 'com.giphy.sdk:ui:2.1.14'
-    implementation 'gun0912.ted:tedbottompicker:2.0.1'
-    implementation 'gun0912.ted:tedpermission-rx2:2.2.3'
-    implementation 'com.hmomeni.verticalslider:verticalslider:0.1.4'
-}
-
-repositories {
-    mavenCentral()
 }
