--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,24 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-parcelize'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
-apply plugin: "androidx.navigation.safeargs"
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+}
+
 
 android {
 
-    compileSdkVersion 31
+    namespace 'com.creat.motiv'
+    compileSdk 33
 
     def versionPropsFile = file('version.properties')
     Properties versionProps = new Properties()
 
     if (versionPropsFile.canRead()) {
         versionProps.load(new FileInputStream(versionPropsFile))
-    }
-    else {
+    } else {
         throw new GradleException("Could not read version.properties!")
     }
 
@@ -30,15 +33,14 @@ android {
     defaultConfig {
         renderscriptSupportModeEnabled true
         applicationId "com.creat.motiv"
-        minSdkVersion 26
-        targetSdkVersion 31
+        minSdk 26
+        targetSdk 33
         versionCode versionNumber
         versionName vName
-        renderscriptTargetApi 19
-        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
-
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -52,24 +54,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            resValue("string","actual_version",vName + "(release)")
-            resValue("string", "feed_advertisement_id", "ca-app-pub-8016530757684172/3873976887")
-            resValue("string", "video_advertisement_id", "ca-app-pub-8016530757684172/4401117155")
-        }
-    }
-
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
-    }
-
-    buildFeatures {
-        viewBinding = true
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue("string", "actual_version", vName + "(release)")
         }
     }
 
@@ -77,6 +62,19 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.3.2'
+    }
+
     packagingOptions {
         resources {
             excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0', 'META-INF/*.kotlin_module']
@@ -90,12 +88,19 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':base')
     implementation project(':manager')
-    implementation "com.github.skydoves:balloon:1.2.7"
-}
-repositories {
-    mavenCentral()
-}
+    implementation('androidx.palette:palette-ktx:1.0.0')
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+}
 
 task updateVersion {
     doLast {
