--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,9 +1,14 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-parcelize'
+plugins {
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
+    id 'dagger.hilt.android.plugin'
+}
 
 android {
-    compileSdkVersion 33
+    namespace 'com.creat.motiv.base'
+    compileSdk 33
 
     defaultConfig {
         minSdkVersion 26
@@ -28,6 +33,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             resValue("string", "feed_advertisement_id", "ca-app-pub-8016530757684172/3873976887")
             resValue("string", "video_advertisement_id", "ca-app-pub-8016530757684172/4401117155")
+
         }
     }
 
@@ -41,43 +47,55 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     api "com.github.CaioProgramming.Ilustris:core:$ilustris_version"
-    api "com.github.CaioProgramming.Ilustris:ui:$ilustris_version"
-    api "com.github.CaioProgramming.Ilustris:animations:$ilustris_version"
-    api 'androidx.navigation:navigation-fragment-ktx:2.5.1'
-    api 'androidx.navigation:navigation-ui-ktx:2.5.1'
-    api 'com.android.support:multidex:1.0.3'
-    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
+    implementation 'androidx.compose.ui:ui-text-google-fonts:1.4.3'
+    implementation('androidx.palette:palette:1.0.0')
+    implementation "dev.shreyaspatil:capturable:1.0.3"
 
-    api "io.insert-koin:koin-core:$koin_version"
-    api "io.insert-koin:koin-android:$koin_version"
-    api "io.insert-koin:koin-androidx-workmanager:$koin_version"
-    api "io.insert-koin:koin-androidx-navigation:$koin_version"
 
-    api 'com.google.android.gms:play-services-ads:21.1.0'
-    api 'de.hdodenhof:circleimageview:3.1.0'
-    api 'com.github.mmin18:realtimeblurview:1.1.2'
-    api 'com.facebook.android:facebook-android-sdk:8.1.0'
-    api 'cat.ereza:customactivityoncrash:2.3.0'
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    api 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-appindexing:20.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.2.1'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
-    api platform('com.google.firebase:firebase-bom:25.12.0')
-    api 'com.google.firebase:firebase-core:21.1.1'
-    api 'com.google.firebase:firebase-firestore-ktx'
-    api 'com.google.firebase:firebase-auth:21.0.8'
-    api 'com.firebaseui:firebase-ui-auth:8.0.1'
-    api 'com.google.firebase:firebase-database-ktx'
-    api 'com.google.firebase:firebase-storage-ktx'
-    api 'com.google.firebase:firebase-appindexing:20.0.0'
-    api 'com.firebaseui:firebase-ui-database:8.0.0'
-    api 'com.google.firebase:firebase-storage:20.0.2'
-    api 'com.google.firebase:firebase-messaging:23.0.8'
-    api 'com.google.firebase:firebase-crashlytics-ktx'
-    api 'com.google.firebase:firebase-analytics-ktx'
-    api 'com.airbnb.android:lottie:3.6.0'
-    api 'com.github.bumptech.glide:glide:4.12.0'
-    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
+    api 'androidx.core:core-ktx:1.10.1'
+    api 'androidx.appcompat:appcompat:1.6.1'
+    api 'com.google.android.material:material:1.9.0'
+    api 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    api 'androidx.activity:activity-compose:1.7.2'
+    api 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
+    api "androidx.navigation:navigation-compose:2.7.0-beta01"
+    api 'androidx.compose.material:material:1.4.3'
+    api 'com.google.accompanist:accompanist-systemuicontroller:0.30.1'
 
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    api platform('androidx.compose:compose-bom:2022.10.00')
+    api 'androidx.compose.ui:ui'
+    api 'androidx.compose.ui:ui-graphics'
+    api 'androidx.compose.ui:ui-tooling:1.4.3'
+    api 'androidx.compose.material3:material3'
+    api 'androidx.compose.runtime:runtime-livedata:1.5.0-beta02'
+    api 'com.github.mcginty:material-colors:1.1.0'
+
+
+    api 'com.github.atick-faisal:compose-material-color:3.0.0'
+    api 'com.airbnb.android:lottie-compose:5.2.0'
+    api 'com.github.skydoves:landscapist-glide:2.1.11'
+    api 'com.github.bumptech.glide:glide:4.15.1'
+    kapt 'com.github.bumptech.glide:compiler:4.15.1'
+
+
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
