--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,21 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-
     ext {
-        ext.kotlin_version = '1.7.10'
-        ext.ilustris_version = '2.5.5'
-        ext.koin_version = "3.1.5"
-    }
-    repositories {
-        google()
-        jcenter()
+        compose_version = '1.3.3'
+        ilustris_version = '2.5.5'
+        hiltVersion = '2.44'
+        kotlinVersion = '1.7.0'
+        applicationName = 'Cuccina'
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath 'com.google.gms:google-services:4.3.13'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.android.databinding:dataBinder:1.0-rc1'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1")
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.7'
     }
-}
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
-        mavenLocal()
-        maven { url "https://jitpack.io" }
-        maven { url "https://maven.google.com" }
-    }
-}
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.application' version '8.0.1' apply false
+    id 'com.android.library' version '8.0.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
-
