--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,17 @@
             android:clearTaskOnLaunch="true"
             android:process=":report_process" />
 
+        <receiver
+            android:name="com.ilustris.widgets.service.MotivWidgetReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/motiv_widget_info" />
+        </receiver>
+
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_notification" />
@@ -63,7 +74,7 @@
         </provider>
 
         <service
-            android:name="com.ilustris.motiv.base.utils.Notifications"
+            android:name="com.ilustris.motiv.base.service.NotificationService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
