--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -7,11 +7,11 @@ plugins {
 
 android {
     namespace 'com.creat.motiv.manager'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 33
+        targetSdkVersion 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -38,6 +38,10 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    kapt {
+        correctErrorTypes true
     }
 
     buildFeatures {
