--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity
             android:name="com.ilustris.motiv.base.ErrorActivity"
+            android:theme="@style/Theme.Motiv"
             android:clearTaskOnLaunch="true"
             android:process=":report_process" />
 
