--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,13 +27,13 @@ android {
 
 
     namespace 'com.creat.motiv'
-    compileSdk 34
+    compileSdk rootProject.ext.compileSdk
 
     defaultConfig {
         renderscriptSupportModeEnabled true
         applicationId "com.creat.motiv"
-        minSdk 26
-        targetSdk 34
+        minSdk rootProject.ext.minSdk
+        targetSdk rootProject.ext.targetSdk
         versionCode versionNumber
         versionName vName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -58,12 +58,11 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = '17'
     }
 
     buildFeatures {
@@ -75,7 +74,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion rootProject.ext.composeCompiler
     }
 
     packagingOptions {
