--- a/base/build.gradle
+++ b/base/build.gradle
@@ -8,22 +8,36 @@ plugins {
 
 android {
     namespace 'com.creat.motiv.base'
-    compileSdk 34
+    compileSdk rootProject.ext.compileSdk
 
     defaultConfig {
-        minSdk 26
-        targetSdk 34
-
+        minSdk rootProject.ext.minSdk
+        targetSdk rootProject.ext.targetSdk
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+
+    kapt {
+        correctErrorTypes  true
+    }
+
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17)
+        }
+    }
+
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion rootProject.ext.composeCompiler
     }
     buildTypes {
         debug {
@@ -42,11 +56,6 @@ android {
 
         }
     }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
 }
 
 dependencies {
@@ -55,7 +64,9 @@ dependencies {
     api "com.github.CaioProgramming.Ilustris:core:$ilustris_version"
     implementation "com.google.dagger:hilt-android:$hiltVersion"
     kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
-    implementation 'androidx.compose.ui:ui-text-google-fonts:1.4.3'
+    api "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
+    implementation 'androidx.annotation:annotation:1.6.0'
+    implementation 'androidx.compose.ui:ui-text-google-fonts:1.5.0'
     implementation('androidx.palette:palette-ktx:1.0.0')
     implementation "dev.shreyaspatil:capturable:1.0.3"
 
@@ -63,14 +74,14 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-firestore-ktx'
-    api 'com.google.firebase:firebase-auth:22.1.0'
+    api 'com.google.firebase:firebase-auth:22.1.1'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-appindexing:20.0.0'
     implementation 'com.firebaseui:firebase-ui-database:8.0.0'
     implementation 'com.google.firebase:firebase-storage:20.2.1'
-    implementation 'com.google.firebase:firebase-messaging:23.2.0'
+    implementation 'com.google.firebase:firebase-messaging:23.2.1'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
@@ -81,19 +92,19 @@ dependencies {
     api 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     api 'androidx.activity:activity-compose:1.7.2'
     api 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
-    api "androidx.navigation:navigation-compose:2.7.0-beta01"
-    api 'androidx.compose.material:material:1.4.3'
-    api 'com.google.accompanist:accompanist-systemuicontroller:0.30.1'
+    api "androidx.navigation:navigation-compose:2.7.0"
+    api 'androidx.compose.material:material:1.5.0'
+    api 'com.google.accompanist:accompanist-systemuicontroller:0.32.0'
 
-    api platform('androidx.compose:compose-bom:2022.10.00')
+    api platform("androidx.compose:compose-bom:$composeBom")
     api 'androidx.compose.ui:ui'
     api 'androidx.compose.ui:ui-graphics'
-    api 'androidx.compose.ui:ui-tooling:1.4.3'
+    api 'androidx.compose.ui:ui-tooling:1.5.0'
     api 'androidx.compose.material3:material3'
-    api 'androidx.compose.runtime:runtime-livedata:1.5.0-beta02'
+    api 'androidx.compose.runtime:runtime-livedata:1.4.3'
 
     api 'com.github.mcginty:material-colors:1.1.0'
-    api 'com.google.android.gms:play-services-ads:22.2.0'
+    api 'com.google.android.gms:play-services-ads:22.3.0'
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
 
 
