--- a/settings.gradle
+++ b/settings.gradle
@@ -2,9 +2,11 @@ pluginManagement {
     repositories {
         google()
         mavenCentral()
-        gradlePluginPortal()
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.google.com' }
+        gradlePluginPortal()
+        mavenLocal()
+
     }
 }
 dependencyResolutionManagement {
@@ -14,6 +16,7 @@ dependencyResolutionManagement {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.google.com' }
+        mavenLocal()
     }
 }
 include ':app'
